<resources>
    <!-- General -->
    <string name="app_name">GreenCommunity</string>

    <!-- AdActivity -->
    <string name="ad_activity_edit_title">Edit Ad</string>
    <string name="ad_activity_title">Create Ad</string>
    <string name="button_addAd">Add new Ad</string>
    <string name="hint_adTitle">Title</string>
    <string name="hint_adDescription">Description</string>
    <string name="hint_adPrice">Price</string>
    <string name="menu_cancelAd">Cancel</string>
    <string name="ad_is_free">Add is Free</string>
    <string name="save_ad">Save Ad</string>
    <string name="view_price">%s€</string>

    <!-- HomeActivity -->
    <string name="button_explore">Explore Ads in your Area</string>
    <string name="text_choseRadius">Choose distance (km)</string>

    <!-- AdListActivity -->
    <string name="menu_addAd">Add</string>
    <string name="adList_title">Ads in your area</string>

    <!-- SignUpActivity -->
    <string name="signUp_email">E-mail</string>
    <string name="signUp_username">Username</string>
    <string name="signUp_password">Password</string>
    <string name="button_signUp">Sign-Up</string>
    <string name="text_SignUp">Sign-Up</string>
    <string name="button_addImage">Add Image</string>
    <string name="password_again">Enter Password Again</string>

    <!-- LoginActivity -->
    <string name="button_login">Login</string>
    <string name="login_email">E-Mail</string>
    <string name="login_password">Password</string>
    <string name="resetPassword">Reset Password</string>
    <string name="error_text">Email or Password incorrect</string>

    <!-- LoginOrSignUpActivity -->
    <string name="text_NotLoggedIn">You are not logged in yet</string>
    <string name="text_ChooseOption">Login or Sign-up</string>
    <string name="text_login">Login</string>

    <!-- Menu -->
    <string name="menu_delete">Delete</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>

    <!-- ProfileActivity -->
    <string name="select_profile_picture">Select profile image</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="text_profile">Profile</string>
    <string name="button_changeProfile">Save Changes</string>
    <string name="button_changeImg">Change Image</string>
    <string name="button_changePassword">Change Password</string>
    <string name="profile_update_successful">Profile has been updated</string>

    <!-- UserAdsActivity -->
    <string name="title_userAds">Your ads</string>
    <string name="title_placeholder">Title Placeholder</string>

    <!-- ImageView Descriptions -->
    <string name="description_ad">Image for of an ad</string>
    <string name="description_profile">Users profile image</string>

    <!-- NavDrawer -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_ads">Your Ads</string>
    <string name="nav_account_settings">Account Settings</string>
    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_sign_up">Sign-Up</string>

    <!-- Error Texts -->
    <string name="enter_password">Please enter a password</string>
    <string name="enter_email">Please enter an email</string>
    <string name="enter_password_length">Enter a password with length > 6</string>
    <string name="enter_password_no_match">The passwords don\'t match</string>
    <string name="enter_username">Please enter a username</string>
    <string name="enter_title">Please enter a title</string>
    <string name="enter_price_or_free">Enter a price or make ad free</string>
    <string name="enter_valid_price">Please enter a valid price</string>
    <string name="email_already_registered">Email already registered</string>
    <string name="username_with_space">Space not allowed</string>



</resources>