<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/home"
            android:title="@string/nav_home"
            />

        <item
            android:id="@+id/profile"
            android:title="@string/nav_profile"
            />

        <item
            android:id="@+id/ads"
            android:title="@string/nav_ads"
            />

    </group>


    <item android:title="@string/nav_account_settings">

        <menu>

            <item
                android:id="@+id/login"
                android:title="@string/nav_login"
                />

            <item
                android:id="@+id/logout"
                android:title="@string/nav_logout"
                />

            <item
                android:id="@+id/signup"
                android:title="@string/nav_sign_up"
                />

        </menu>

    </item>

</menu>