<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity"
    >

    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="539dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/profileUpdateSuccess"
            style="@style/CustomSuccessText"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="72dp"
            android:text="@string/profile_update_successful"
            android:textColor="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:contentDescription="@string/description_profile"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/username"
            style="@style/CustomEditText"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:hint="@string/signUp_username"
            android:autofillHints ="hint"
            />

        <TextView
            android:id="@+id/email"
            style="@style/CustomTextView"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            />


        <Button
            android:id="@+id/btn_changeImg"
            android:layout_width="321dp"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:text="@string/button_changeImg"
            style="@style/CustomButton"/>


    </LinearLayout>

    <Button
        android:id="@+id/btn_change"
        android:layout_width="278dp"
        android:layout_height="73dp"
        android:layout_marginBottom="60dp"
        android:text="@string/button_changeProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/CustomButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>