<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <include
            android:id="@+id/appToolbar"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appToolbar"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/adImg"
                    android:layout_width="match_parent"
                    android:layout_height="161dp"
                    android:layout_marginTop="10dp"
                    tools:srcCompat="@mipmap/ic_launcher"
                    />

                <Button
                    android:id="@+id/btnAddImg"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:layout_margin="16dp"
                    android:text="@string/button_addImage"
                    style="@style/CustomButton"
                    />

                <EditText
                    android:id="@+id/adTitle"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_adTitle"
                    style="@style/CustomEditTextTitle"
                    />

                <EditText
                    android:id="@+id/adDescription"
                    android:layout_width="397dp"
                    android:layout_height="77dp"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_adDescription"
                    style="@style/CustomEditTextDescription"
                    />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="98dp"
                    >

                    <CheckBox
                        android:id="@+id/adFree"
                        android:layout_width="146dp"
                        android:layout_height="85dp"
                        android:text="@string/ad_is_free"
                        />

                    <EditText
                        android:id="@+id/adPrice"
                        android:layout_width="237dp"
                        android:layout_height="88dp"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_adPrice"
                        style="@style/CustomEditTextTitle"
                        />

                </TableRow>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="211dp"
                    android:layout_height="75dp"
                    android:layout_margin="16dp"
                    android:text="@string/button_addAd"
                    style="@style/CustomButton"
                    />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>