<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    >

    <include
        android:id="@+id/appToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_bar_main"
        />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="357dp"
        android:layout_height="38dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/CustomErrorText"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="352dp"
        android:layout_height="331dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_text"
        >

        <EditText
            android:id="@+id/email"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_margin="15dp"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            style="@style/CustomEditText"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_margin="15dp"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            style="@style/CustomEditText"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="278dp"
        android:layout_height="73dp"
        android:layout_marginBottom="168dp"
        android:text="@string/button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        style="@style/CustomButton"
        />

    <Button
        android:id="@+id/btn_forgotPassword"
        android:layout_width="278dp"
        android:layout_height="73dp"
        android:layout_marginBottom="60dp"
        android:text="@string/resetPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/CustomButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>