<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:layout_marginTop="0dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/adViewImg"
                    android:layout_width="match_parent"
                    android:layout_height="216dp"
                    android:layout_marginTop="10dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/adTitle"
                    android:layout_width="395dp"
                    android:layout_height="71dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_adTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/adDescription"
                    android:layout_width="395dp"
                    android:layout_height="136dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_adDescription"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TableRow
                    android:layout_width="401dp"
                    android:layout_height="96dp">

                    <CheckBox
                        android:id="@+id/adFree"
                        android:layout_width="150dp"
                        android:layout_height="77dp"
                        android:clickable="false"
                        android:text="Ad is Free" />

                    <TextView
                        android:id="@+id/adPrice"
                        android:layout_width="237dp"
                        android:layout_height="68dp"
                        android:layout_margin="8dp"
                        android:autofillHints="hint"
                        android:enabled="true"
                        android:hint="@string/hint_adPrice"
                        android:inputType="text"
                        android:maxLength="100"
                        android:maxLines="3"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp" />

                </TableRow>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>